test/Serialization/modularization-error.code
/// Simulate typical modularization issues using Codira modules.
// RUN: %empty-directory(%t)
// RUN: split-file %s %t

/// Compile two library modules A and B, and a client.
// RUN: %target-language-frontend %t/LibOriginal.code -emit-module-path %t/A.codemodule -module-name A
// RUN: %target-language-frontend %t/Empty.code -emit-module-path %t/B.codemodule -module-name B
// RUN: %target-language-frontend %t/LibWithXRef.code -emit-module-path %t/LibWithXRef.codemodule -module-name LibWithXRef -I %t

/// Move MyType from A to B.
// RUN: %target-language-frontend %t/Empty.code -emit-module-path %t/A.codemodule -module-name A
// RUN: %target-language-frontend %t/LibOriginal.code -emit-module-path %t/B.codemodule -module-name B
// RUN: not %target-language-frontend -emit-sil %t/LibWithXRef.codemodule -module-name LibWithXRef -I %t -diagnostic-style toolchain 2>&1 \
// RUN:   | %FileCheck --check-prefixes CHECK,CHECK-MOVED %s
// CHECK-MOVED: LibWithXRef.codemodule:1:1: error: reference to type 'MyType' broken by a context change; 'MyType' was expected to be in 'A', but now a candidate is found only in 'B'

/// Force working around the broken modularization to get a result and no errors.
// RUN: %target-language-frontend -emit-sil %t/LibWithXRef.codemodule -module-name LibWithXRef -I %t \
// RUN:   -experimental-force-workaround-broken-modules -diagnostic-style toolchain 2>&1 \
// RUN:   | %FileCheck --check-prefixes CHECK-WORKAROUND %s
// CHECK-WORKAROUND: LibWithXRef.codemodule:1:1: warning: reference to type 'MyType' broken by a context change; 'MyType' was expected to be in 'A', but now a candidate is found only in 'B'
// CHECK-WORKAROUND-NEXT: A.MyType
// CHECK-WORKAROUND-NEXT: ^
// CHECK-WORKAROUND: note: the type was expected to be found in module 'A' at '
// CHECK-WORKAROUND-SAME: A.codemodule'
// CHECK-WORKAROUND: note: the type was actually found in module 'B' at '
// CHECK-WORKAROUND-SAME: B.codemodule'
// CHECK-WORKAROUND: note: attempting forced recovery enabled by -experimental-force-workaround-broken-modules
// CHECK-WORKAROUND: fn foo() -> some Proto

/// Change MyType into a function.
// RUN: %target-language-frontend %t/LibTypeChanged.code -emit-module-path %t/A.codemodule -module-name A
// RUN: %target-language-frontend %t/Empty.code -emit-module-path %t/B.codemodule -module-name B
// RUN: not %target-language-frontend -emit-sil %t/LibWithXRef.codemodule -module-name LibWithXRef -I %t -diagnostic-style toolchain 2>&1 \
// RUN:   | %FileCheck --check-prefixes CHECK,CHECK-KIND-CHANGED %s
// CHECK-KIND-CHANGED: LibWithXRef.codemodule:1:1: error: reference to type 'MyType' broken by a context change; the declaration kind of 'MyType' from 'A' changed since building 'LibWithXRef'

/// Change MyType into a function and move it.
// RUN: %target-language-frontend %t/Empty.code -emit-module-path %t/A.codemodule -module-name A
// RUN: %target-language-frontend %t/LibTypeChanged.code -emit-module-path %t/B.codemodule -module-name B
// RUN: not %target-language-frontend -emit-sil %t/LibWithXRef.codemodule -module-name LibWithXRef -I %t -diagnostic-style toolchain 2>&1 \
// RUN:   | %FileCheck --check-prefixes CHECK,CHECK-KIND-CHANGED-AND-MOVED %s
// CHECK-KIND-CHANGED-AND-MOVED: LibWithXRef.codemodule:1:1: error: reference to type 'MyType' broken by a context change; the declaration kind of 'MyType' changed since building 'LibWithXRef', it was in 'A' and now a candidate is found only in 'B'

/// Remove MyType from all imported modules.
// RUN: %target-language-frontend %t/Empty.code -emit-module-path %t/A.codemodule -module-name A
// RUN: %target-language-frontend %t/Empty.code -emit-module-path %t/B.codemodule -module-name B
// RUN: not %target-language-frontend -emit-sil %t/LibWithXRef.codemodule -module-name LibWithXRef -I %t -diagnostic-style toolchain 2>&1 \
// RUN:   | %FileCheck --check-prefixes CHECK,CHECK-NOT-FOUND %s
// CHECK-NOT-FOUND: LibWithXRef.codemodule:1:1: error: reference to type 'MyType' broken by a context change; 'MyType' is not found, it was expected to be in 'A'

// CHECK: LibWithXRef.codemodule:1:1: note: could not deserialize extension

//--- Empty.code
//--- LibOriginal.code
public struct MyType {
    public init() {}
}

//--- LibTypeChanged.code
/// Make it a function to fail filtering.
public fn MyType() {}

//--- LibWithXRef.code
import A
import B

public protocol Proto {}
extension MyType : Proto {}

@available(CodiraStdlib 5.1, *)
public fn foo() -> some Proto { return MyType() }
